tests/pos/i18261.bis/Foo_0.scala
trait VAL

type Foo[T, M] = M match
  case VAL => T
