tests/neg/i18448/UBMatch_2.scala
trait Foo
type Of[T] <: Foo = T match
  case Foo => T <:! Foo
